@@ -48,6 +48,7 @@
  - A001694 - Powerful Numbers
  - A005361 - Product of Prime Exponents of factors of N
  - A005934 - Highly powerful numbers: numbers with record value
+ - A001597 - Perfect Powers
 
 ## v0.8.0
 
